# s3-autosync

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  Makefile  README.rst  mariadb.docker-compose.yaml  mariadb.repo  mariadb_mysql.yaml  pyproject.toml  tox.ini
.codebuild/: buildspec.yml  buildspec_image.yml  codebuild_projects.template
.github/: ISSUE_TEMPLATE.md
aws_s3_files_autosync/: __init__.py  cli.py  common.py  files_autosync.py  files_management.py  input.json  local_sync.py  logging.py  mysqldb_management.py  s3_file_mgmt.py  s3_handler.py  ssm_management.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: conftest.py  test.json  test.yaml  test_config.py  test_file.py
